# SolubilityGNN

./: .gitignore  README.md  pyproject.toml
data/: clean-dataset.csv
notebooks/: 01_DataAndGraphs.ipynb  02_GNNAndHyperparameterTuning.ipynb  testing.ipynb
results/: grid_search.csv
results/history/: hidden_dim=100num_layers=1aggr=MeanAggregation().csv  hidden_dim=100num_layers=1aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=100num_layers=1aggr=SumAggregation().csv  hidden_dim=100num_layers=2aggr=MeanAggregation().csv  hidden_dim=100num_layers=2aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=100num_layers=2aggr=SumAggregation().csv  hidden_dim=100num_layers=3aggr=MeanAggregation().csv  hidden_dim=100num_layers=3aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=100num_layers=3aggr=SumAggregation().csv  hidden_dim=100num_layers=4aggr=MeanAggregation().csv  hidden_dim=100num_layers=4aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=100num_layers=4aggr=SumAggregation().csv  hidden_dim=128num_layers=1aggr=MeanAggregation().csv  hidden_dim=128num_layers=1aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=128num_layers=1aggr=SumAggregation().csv  hidden_dim=128num_layers=2aggr=MeanAggregation().csv  hidden_dim=128num_layers=2aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=128num_layers=2aggr=SumAggregation().csv  hidden_dim=128num_layers=3aggr=MeanAggregation().csv  hidden_dim=128num_layers=3aggr=SoftmaxAggregation(learn=True).csv  hidden_dim=128num_layers=3aggr=SumAggregation().csv  hidden_dim=128num_layers=4aggr=MeanAggregation().csv  (+134 more)
src/SolGnn/: GNN.py  (+6 more)
(+63 files in other folders)
