[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solgnn"
version = "0.1.0"
description = "Graph neural network model development"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Alex Manly" }
]

dependencies = [
  "numpy",
  "pyyaml",
  "python-dotenv",
  "rdkit",
  "torch",
  "torch-geometric",
  "pandas",
  "sklearn",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
